[package]
name = "rpc-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
